# ballastlane_ht

./: README.md
backend/: .env.example  .gitignore  README.md  SHELL_USAGE.md  main.py  pyproject.toml  pytest.ini  seed_db.py  seed_pokemon.py  shell.py  test_shell_demo.py  test_sql_logging.py
backend/app/: __init__.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: pokemon.py  user.py
backend/app/routes/: __init__.py  admin.py  auth.py  pokemon.py
backend/app/schemas/: __init__.py  pokemon.py  user.py
backend/app/services/: __init__.py  auth_service.py  pokemon_service.py  user_service.py
backend/tests/: conftest.py  test_admin_routes.py  test_auth_routes.py  test_auth_service.py  test_user_service.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/pokemon/[id]/: page.module.css  page.tsx
frontend/components/: Header.module.css  Header.tsx  LoginForm.module.css  LoginForm.tsx  PokemonCard.module.css  PokemonCard.tsx  PokemonGrid.module.css  PokemonGrid.tsx  SearchBar.module.css  SearchBar.tsx  SortDropdown.module.css  SortDropdown.tsx  TypeChip.module.css  TypeChip.tsx
frontend/lib/: api.ts
frontend/stores/: authStore.ts  pokemonStore.ts
frontend/types/: index.ts
